feat(consultation): add avon section

--- a/src/ui/config.css
+++ b/src/ui/config.css
@@ -23,6 +23,7 @@ body {
   --color-primary: #3c54ee;
   --color-inactive: #e8e9f2;
 
+  --color-avon: #ff376f;
   --color-text-primary: #151833;
 
   --color-link: #2d47ea;
