--- a/features/common/consultation/organisms/Header/Header.css
+++ b/features/common/consultation/organisms/Header/Header.css
@@ -10,6 +10,17 @@
   }
 }
 
+.avon {
+  margin-top: -40px;
+  margin-right: calc(0px - ((100vw - 800px - 400px) / 2));
+  margin-left: calc(0px - ((100vw - 800px - 400px) / 2));
+
+  padding-top: 40px;
+  padding-right: calc((100vw - 800px - 400px) / 2);
+  padding-left: calc((100vw - 800px - 400px) / 2);
+  background: linear-gradient(0deg, #faf9f7 0%, var(--color-avon) 100%);
+}
+
 .number {
   margin-right: 16px;
   font: var(--title-bold);
