--- a/features/common/consultation/organisms/AvonSection/AvonSection.css
+++ b/features/common/consultation/organisms/AvonSection/AvonSection.css
@@ -5,6 +5,10 @@
 .logoWrapper {
   width: 240px;
   background-color: var(--color-avon);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 16px 24px;
 }
 
 .textWrapper {
@@ -33,4 +37,9 @@
   &:last-of-type {
     margin-bottom: 0;
   }
+}
+
+.logo {
+  width: 192px !important;
+  height: 84px !important;
 }
