--- a/features/common/consultation/organisms/AvonSection/AvonSection.css
+++ b/features/common/consultation/organisms/AvonSection/AvonSection.css
@@ -1,10 +1,14 @@
 .avon {
   display: flex;
+  margin-bottom: 24px;
 
   @media (--smallMiddleDown) {
     flex-direction: column;
-    width: 100vw !important;
-    margin-left: -16px;
+    width: 100vw;
+  }
+  @media (--xsmallDown) {
+    margin-left: 0;
+    width: auto;
   }
 }
 
@@ -15,13 +19,12 @@
   justify-content: center;
   align-items: center;
   padding: 16px 24px;
-
   @media (--smallMiddleDown) {
-    width: calc(100% - 32px);
+    width: calc(100%);
+    margin: 0 auto;
   }
-
   @media (--xsmallDown) {
-    width: 100%;
+    width: 100vw;
   }
 }
 
@@ -47,7 +50,6 @@
   font: var(--text12-16);
   color: var(--text-color-secondary);
   margin-bottom: 8px;
-
   &:last-of-type {
     margin-bottom: 0;
   }
