--- a/ui/config.css
+++ b/ui/config.css
@@ -83,6 +83,7 @@ body {
 @custom-media --smallDown (max-width: 767px);
 @custom-media --mediumSecondDown (max-width: 832px);
 @custom-media --mediumDown (max-width: 959px);
+@custom-media --largeDown (max-width: 1200px);
 
 @custom-media --xsmallUp (min-width: 501px);
 @custom-media --smallUp (min-width: 768px);
