--- a/features/landing/features/home/organisms/Experts/components/Photos/Photos.css
+++ b/features/landing/features/home/organisms/Experts/components/Photos/Photos.css
@@ -6,14 +6,29 @@
   justify-items: center;
 
   @media (--mediumDown) {
-    grid-template-columns: repeat(3, 100px);
+    grid-template-columns: repeat(3, 1fr);
     grid-gap: 16px;
   }
 
   @media (--smallDown) {
-    grid-template-columns: repeat(3, 80px);
+    grid-template-columns: repeat(3, 1fr);
     grid-gap: 16px;
     margin: 0 auto;
+    width: 100%;
+  }
+}
+
+.photoWrap {
+  position: relative;
+  width: 100%;
+  height: 100%;
+
+  @media (--mediumDown) {
+    &:after {
+      content: '';
+      display: block;
+      padding-bottom: 100%;
+    }
   }
 }
 
@@ -25,6 +40,11 @@
   object-fit: cover;
 
   @media (--mediumDown) {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
     grid-gap: 16px;
     align-self: baseline;
     min-height: 100px;
