--- a/features/common/consultation/organisms/Header/Header.css
+++ b/features/common/consultation/organisms/Header/Header.css
@@ -16,19 +16,19 @@
   margin-top: -40px;
   padding-top: 40px;
 
-  margin-right: calc(0px - ((100vw - 800px - 400px) / 2));
-  margin-left: calc(0px - ((100vw - 800px - 400px) / 2));
+  margin-right: calc(0px - ((100vw - 1200px) / 2));
+  margin-left: calc(0px - ((100vw - 1200px) / 2));
 
-  padding-right: calc((100vw - 800px - 400px) / 2);
-  padding-left: calc((100vw - 800px - 400px) / 2);
+  padding-right: calc((100vw - 1200px) / 2);
+  padding-left: calc((100vw - 1200px) / 2);
   background: linear-gradient(0deg, #faf9f7 0%, #fcc6d3 100%);
 
   @media (--largeDown) {
-    margin-right: calc(0px - ((100vw - (100vw - 400px) - 400px) / 2));
-    margin-left: calc(0px - ((100vw - (100vw - 400px) - 400px) / 2));
+    margin-right: calc(0px - ((100vw - var(--width-without-chat) - 400px) / 2));
+    margin-left: calc(0px - ((100vw - var(--width-without-chat) - 400px) / 2));
 
-    padding-right: calc((100vw - (100vw - 400px) - 400px) / 2);
-    padding-left: calc((100vw - (100vw - 400px) - 400px) / 2);
+    padding-right: calc((100vw - var(--width-without-chat) - 400px) / 2);
+    padding-left: calc((100vw - var(--width-without-chat) - 400px) / 2);
 
     & .title {
       padding-left: 24px;
@@ -53,9 +53,6 @@
   @media (--smallMiddleDown) {
     margin-right: -16px;
     margin-left: -16px;
-  }
-
-  @media (--xsmallDown) {
   }
 }
 
