--- a/features/common/consultation/organisms/Header/Header.css
+++ b/features/common/consultation/organisms/Header/Header.css
@@ -2,7 +2,6 @@
   display: flex;
   align-items: baseline;
   margin-bottom: 16px;
-
   @media (--smallDown) {
     flex-direction: column;
     padding: 0 16px 16px;
@@ -12,12 +11,10 @@
 
 .avon {
   flex-direction: column;
-
   margin-top: -40px;
   padding-top: 40px;
-
-  margin-right: calc(0px - ((100vw - 1200px) / 2));
-  margin-left: calc(0px - ((100vw - 1200px) / 2));
+  margin-right: calc((100vw - 1200px) / -2);
+  margin-left: calc((100vw - 1200px) / -2);
 
   padding-right: calc((100vw - 1200px) / 2);
   padding-left: calc((100vw - 1200px) / 2);
@@ -26,10 +23,8 @@
   @media (--largeDown) {
     margin-right: calc(0px - ((100vw - var(--width-without-chat) - 400px) / 2));
     margin-left: calc(0px - ((100vw - var(--width-without-chat) - 400px) / 2));
-
     padding-right: calc((100vw - var(--width-without-chat) - 400px) / 2);
     padding-left: calc((100vw - var(--width-without-chat) - 400px) / 2);
-
     & .title {
       padding-left: 24px;
     }
@@ -38,18 +33,15 @@
   @media (--mediumDown) {
     margin-right: calc(0px - ((100vw - 800px) / 2));
     margin-left: calc(0px - ((100vw - 800px) / 2));
-
     padding-right: calc((100vw - 800px) / 2);
     padding-left: calc((100vw - 800px) / 2);
   }
-
   @media (--mediumSecondDown) {
     margin-top: -24px;
     padding-top: 24px;
     margin-right: -24px;
     margin-left: -24px;
   }
-
   @media (--smallMiddleDown) {
     margin-right: -16px;
     margin-left: -16px;
