--- a/features/landing/features/home/organisms/Corporate/components/Partners/components/PartnersList/PartnersList.css
+++ b/features/landing/features/home/organisms/Corporate/components/Partners/components/PartnersList/PartnersList.css
@@ -2,12 +2,15 @@
   display: flex;
   justify-content: space-between;
   margin-bottom: 68px;
-  overflow: scroll;
-  overscroll-behavior: contain;
+  flex-wrap: wrap;
 
   @media (--smallDown) {
     max-width: 100vw;
     margin-bottom: 32px;
+    flex-wrap: nowrap;
+    overflow: scroll;
+    overscroll-behavior: contain;
+    padding-left: 16px;
   }
 }
 
