--- a/features/client/features/consultation/organisms/QuestionNotification/components/clear-morning/ClearMorning.css
+++ b/features/client/features/consultation/organisms/QuestionNotification/components/clear-morning/ClearMorning.css
@@ -4,21 +4,23 @@
   grid-template-row: auto auto;
   gap: 20px;
   align-items: center;
-
+  flex-grow: 1;
+  margin-top: 96px;
+  margin-left: 0px;
   @media (--smallDown) {
+    margin: 32px auto 0px;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    padding: 0 16px;
   }
-
   & > img {
     max-width: 100%;
-
     @media (--smallDown) {
+      margin-bottom: 12px;
       max-width: 82px;
     }
   }
-
   & > p {
     margin-bottom: 0;
   }
