--- a/src/ui/button/Button.css
+++ b/src/ui/button/Button.css
@@ -5,7 +5,6 @@
   border: none;
   border-radius: 8px;
   transition: border-color 0.2s, background-color 0.2s;
-
   &[disabled] {
     opacity: 0.4;
   }
@@ -19,14 +18,12 @@
   background-color: var(--color-primary);
   box-shadow: inset 0 1px 1px 0.5px rgba(255, 255, 255, 0.1),
     0 3px 6px 0 rgba(60, 84, 238, 0.2);
-
   &:hover:enabled,
   &:focus:enabled {
     background-color: #354ad4;
     box-shadow: inset 0 1px 1px 0.5px rgba(255, 255, 255, 0.1),
       0 1px 3px 0 rgba(60, 84, 238, 0.1);
   }
-
   &:active:enabled {
     background-color: #2f41ba;
     box-shadow: none;
@@ -37,12 +34,10 @@
   transition: border-color 0.2s, background-color 0.2s;
   color: var(--color-link);
   border: 1px solid rgba(60, 84, 238, 0.65);
-
   &:hover:enabled,
   &:focus:enabled {
     border-color: var(--color-primary);
   }
-
   &:active:enabled {
     background-color: rgba(60, 84, 238, 0.08);
   }
@@ -55,12 +50,10 @@
   border: 1px solid #dcdce7;
   box-shadow: inset 0 1px 1px 0.5px rgba(255, 255, 255, 0.25),
     0 1px 2px 0 rgba(0, 0, 0, 0.04);
-
   &:hover:enabled,
   &:focus:enabled {
     background-color: #dcdce7;
   }
-
   &:active:enabled {
     background-color: #d0d0db;
     box-shadow: inset 0 1px 3px 0 rgba(21, 24, 51, 0.1);
@@ -73,7 +66,6 @@
   transition: border-color 0.2s, background-color 0.2s;
   padding: 17px 36px 19px 36px;
   font: var(--text18-28);
-
   @media (--smallDown) {
     padding: 11px 28px 13px 28px;
     font: var(--text16-24);
@@ -94,4 +86,8 @@
 .small {
   padding: 5px 16px;
   font: var(--text14-20);
+}
+
+.super {
+  background-color: #ffd46d;
 }
