fix(rating modal): fix styles

--- a/features/client/features/consultation/organisms/withFinishModal/molecules/RatingButton/RatingButton.css
+++ b/features/client/features/consultation/organisms/withFinishModal/molecules/RatingButton/RatingButton.css
@@ -1,6 +1,11 @@
 .button {
-  margin-right: 12px;
+  margin-right: 8px;
+  width: 48px;
   &:last-child {
     margin-right: 0;
+  }
+
+  @media (--smallDown) {
+    margin-bottom: 8px;
   }
 }
