--- a/features/client/features/consultation/organisms/withFinishModal/organisms/FinishModal/FinishModal.css
+++ b/features/client/features/consultation/organisms/withFinishModal/organisms/FinishModal/FinishModal.css
@@ -2,8 +2,12 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  max-width: 720px;
+  width: 720px;
   padding: 13px 40px 40px 40px;
+
+  @media (--smallDown) {
+    width: 100%;
+  }
 }
 
 .text {
