feat(toggle): update styles

--- a/src/ui/toggle/Toggle.css
+++ b/src/ui/toggle/Toggle.css
@@ -3,7 +3,6 @@
   --height: 40px;
   --radius: 22px;
   --toggle-size: 36px;
-
   position: relative;
   display: flex;
   flex-direction: column;
@@ -17,11 +16,9 @@
   border-radius: var(--radius);
   outline-width: 0px;
   transition: background-color var(--animation-duration);
-
   &:focus {
     box-shadow: 0 0 0 2px var(--color-primary);
   }
-
   &::after {
     position: absolute;
     display: inline-block;
@@ -31,8 +28,7 @@
     content: '';
     background-color: #fff;
     border-radius: 50%;
-    box-shadow: 0 0.5px 1px 0 rgba(21, 24, 51, 0.08),
-      0 1px 3px 0 rgba(21, 24, 51, 0.16);
+    box-shadow: 0 0.5px 1px 0 rgba(21, 24, 51, 0.08), 0 1px 3px 0 rgba(21, 24, 51, 0.16);
     transition: left var(--animation-duration);
   }
 }
@@ -43,13 +39,11 @@
   color: #fff;
   text-align: left;
   background-color: var(--color-primary);
-
   &::after {
+    top: 2px;
     left: 54px;
   }
-
-  &:hover:not(.disabled),
-  &:focus:not(.disabled) {
+  &:hover:not(.disabled), &:focus:not(.disabled) {
     background-color: #354ad4;
   }
 }
@@ -60,13 +54,11 @@
   color: var(--color-text-primary);
   text-align: right;
   background-color: var(--color-inactive);
-
   &::after {
-    left: 0;
+    top: 2px;
+    left: 0px;
   }
-
-  &:hover:not(.disabled),
-  &:focus:not(.disabled) {
+  &:hover:not(.disabled), &:focus:not(.disabled) {
     background-color: #dcdce7;
   }
 }
