feat(rating question): move title to single component

--- a/features/client/features/consultation/organisms/withFinishModal/organisms/RatingQuestion/RatingQuestion.css
+++ b/features/client/features/consultation/organisms/withFinishModal/organisms/RatingQuestion/RatingQuestion.css
@@ -16,3 +16,10 @@
 .finalText {
   margin: 0;
 }
+
+.title {
+  max-width: 604px;
+  margin: 0 0 40px 0;
+  font: var(--title-medium);
+  text-align: center;
+}
