--- a/features/client/features/consultation/organisms/withFinishModal/organisms/RatingQuestion/components/ClientStory/ClientStory.css
+++ b/features/client/features/consultation/organisms/withFinishModal/organisms/RatingQuestion/components/ClientStory/ClientStory.css
@@ -1,11 +1,12 @@
 .container {
   max-width: 540px;
   margin: 0 auto;
+  text-align: center;
 }
 
 .text {
   margin: 0;
-  margin-bottom: 16px;
+  margin-bottom: 40px;
 }
 
 .textCenter {
@@ -16,8 +17,11 @@
 
 .input {
   max-width: 400px;
+  margin: 0 auto;
+  text-align: left;
 }
 
 .button {
   width: 100%;
+  max-width: 400px;
 }
