--- a/features/admin/features/statistics/components/rating/Rating.css
+++ b/features/admin/features/statistics/components/rating/Rating.css
@@ -1,19 +1,3 @@
-.table {
-  width: 100%;
-  margin-bottom: 48px;
-  & tr:nth-of-type(2n) {
-    background-color: rgba(60, 84, 238, 0.1);
-  }
-  & th,
-  & td {
-    text-align: center;
-    border-right: 1px solid rgba(60, 84, 238, 0.5);
-    &:last-child {
-      border-right: none;
-    }
-  }
-}
-
-.stars.stars {
-  text-align: left;
+.row {
+  line-height: 6px;
 }
