--- a/features/admin/features/statistics/components/rating-doctors/components/detail-table/DetailTable.css
+++ b/features/admin/features/statistics/components/rating-doctors/components/detail-table/DetailTable.css
@@ -1,7 +1,16 @@
+.button {
+  margin-bottom: 16px;
+}
+
+
 .content {
   padding: 24px 16px;
 }
 
 .valueContainer {
   margin-top: 56px;
+}
+
+.average {
+  margin-bottom: 16px;
 }
