--- a/ui/Input/AntInput.css
+++ b/ui/Input/AntInput.css
@@ -1,6 +1,6 @@
 .ant-input.ant-input.ant-input {
   box-sizing: border-box;
-  height: auto;
+  height: auto !important;
   padding: 12px 44px 12px 16px;
   font: var(--text16-24);
   color: var(--text-color-primary);
