--- a/features/common/chat/organisms/ChatWrapper/ChatWrapper.css
+++ b/features/common/chat/organisms/ChatWrapper/ChatWrapper.css
@@ -2,9 +2,11 @@
   display: flex;
   flex: 1 1 0;
   flex-direction: column;
+  justify-content: flex-end;
   max-height: 100%;
   overflow-y: scroll;
   overscroll-behavior: contain;
+
   &::-webkit-scrollbar {
     display: none;
   }
