--- a/features/common/chat/page/Chat.css
+++ b/features/common/chat/page/Chat.css
@@ -44,7 +44,7 @@
 }
 
 .input.input.input.input.input.input {
-  height: 48px !important;
+  height: 48px;
   padding: 12px 44px 12px 41px !important;
   margin: 0 !important;
   border-radius: 0 !important;
