--- a/src/ui/nav-link/NavLink.css
+++ b/src/ui/nav-link/NavLink.css
@@ -2,6 +2,7 @@
   font: var(--text16-24);
   text-decoration: none;
   border-bottom: 1px solid transparent;
+  white-space: nowrap;
 
   &:focus {
     text-decoration: none;
