--- a/features/admin/features/doctors-control/DoctorsControl.css
+++ b/features/admin/features/doctors-control/DoctorsControl.css
@@ -13,6 +13,11 @@
   padding: 12px 16px !important;
 }
 
+.loader {
+  width: 340px !important;
+  background: transparent;
+}
+
 .button {
   margin-top: 24px;
 }
