--- a/features/landing/features/request/organisms/RequestForm/RequestForm.css
+++ b/features/landing/features/request/organisms/RequestForm/RequestForm.css
@@ -130,7 +130,6 @@
   margin-right: 8px;
 }
 
-
 .button {
   display: block;
   width: 100%;
@@ -146,4 +145,11 @@
 .symptomsList {
   display: grid;
   grid-template-columns: 1fr 1fr;
+}
+
+.symptomsRadioGroup div {
+  @media (--mediumDown) {
+    display: grid !important;
+    gap: 12px;
+  }
 }
