feat(header): add onther partners block

--- a/src/ui/config.css
+++ b/src/ui/config.css
@@ -22,9 +22,11 @@ body {
   /* colors */
   --color-primary: #3c54ee;
   --color-inactive: #e8e9f2;
+  --color-dark: #151833;
 
   --color-avon: #ff376f;
   --color-text-primary: #151833;
+  --color-text-secondary: #6F717F;
 
   --color-link: #2d47ea;
   --color-link-underline: rgba(45, 71, 234, 0.5);
