--- a/src/ui/config.css
+++ b/src/ui/config.css
@@ -23,10 +23,11 @@ body {
   --color-primary: #3c54ee;
   --color-inactive: #e8e9f2;
   --color-dark: #151833;
+  --color-beige: #f7f6f2;
 
   --color-avon: #ff376f;
   --color-text-primary: #151833;
-  --color-text-secondary: #6F717F;
+  --color-text-secondary: #6f717f;
 
   --color-link: #2d47ea;
   --color-link-underline: rgba(45, 71, 234, 0.5);
