--- a/features/main/layout/organisms/Header/organisms/OtherPartners/OtherPartners.css
+++ b/features/main/layout/organisms/Header/organisms/OtherPartners/OtherPartners.css
@@ -10,7 +10,8 @@
 }
 
 .tablink {
-  font-size: 16px;
+  font-size: 14px;
+  line-height: 20px;
   padding: 6px 20px;
   color: var(--color-text-secondary) !important;
   text-transform: uppercase;
@@ -27,6 +28,7 @@
 .link {
   padding: 0 20px;
   font-size: 12px;
+  line-height: 16px;
   color: var(--color-text-secondary) !important;
 
   &:hover {
