feat(intro): finish styles

--- a/features/landing/features/home/organisms/Main/Main.css
+++ b/features/landing/features/home/organisms/Main/Main.css
@@ -1,3 +1,9 @@
 .main {
-  background-color: #fff;
+  background-color: var(--color-beige);
+}
+
+
+.wrapper {
+  max-width: 960px;
+  margin: 0 auto;
 }
