--- a/features/landing/features/home/organisms/Experts/Experts.css
+++ b/features/landing/features/home/organisms/Experts/Experts.css
@@ -2,7 +2,7 @@
   width: 100vw;
   min-width: 100%;
   margin-left: 50%;
-  background-color: #faf9f7;
+  background-color: #fff;
   transform: translateX(-50%);
 }
 
