--- a/features/landing/features/home/organisms/Corporate/Corporate.css
+++ b/features/landing/features/home/organisms/Corporate/Corporate.css
@@ -1,5 +1,6 @@
 .corporate {
-  padding: 120px 0;
+  border-top: 1px solid var(--color-inactive);
+  padding: 63px 0 28px;
 
   @media (--mediumDown) {
     padding: 40px 16px 48px 16px;
