--- a/features/landing/features/home/organisms/Corporate/components/Partners/components/PartnersList/PartnersList.css
+++ b/features/landing/features/home/organisms/Corporate/components/Partners/components/PartnersList/PartnersList.css
@@ -1,7 +1,7 @@
 .partnersList {
   display: flex;
   justify-content: space-between;
-  margin-bottom: 68px;
+  margin-top: 48px;
   flex-wrap: wrap;
 
   @media (--smallDown) {
@@ -72,6 +72,7 @@
   margin: 0;
   font: var(--text14-20);
   font-weight: 500;
+  text-align: center;
 }
 
 .list {
