--- a/features/landing/features/home/organisms/Main/components/About/About.css
+++ b/features/landing/features/home/organisms/Main/components/About/About.css
@@ -1,7 +1,7 @@
 .about {
   display: flex;
   justify-content: space-between;
-  margin-bottom: 120px;
+  margin: 64px 0 96px;
 
   @media (--smallDown) {
     flex-direction: column;
