--- a/features/main/layout/organisms/Header/organisms/OtherPartners/OtherPartners.css
+++ b/features/main/layout/organisms/Header/organisms/OtherPartners/OtherPartners.css
@@ -7,6 +7,7 @@
 
 .tabLinks {
   display: flex;
+  font-family: var(--fontFamily-title);
 }
 
 .tablink {
@@ -19,6 +20,10 @@
   &:hover {
     border-bottom: none !important;
   }
+}
+
+.tablinkLight {
+  background-color: var(--color-beige);
 }
 
 .links {
