--- a/features/landing/features/home/organisms/Main/components/Steps/Steps.css
+++ b/features/landing/features/home/organisms/Main/components/Steps/Steps.css
@@ -24,3 +24,37 @@
   margin-bottom: 48px;
   max-width: 700px;
 }
+
+.step {
+  @media (--smallDown) {
+    margin-bottom: 32px;
+
+    &:last-of-type {
+      margin-bottom: 0;
+    }
+  }
+}
+
+.text {
+  margin-bottom: 0;
+  white-space: pre-line;
+  text-align: center;
+  max-width: 240px;
+}
+
+.img {
+  width: 176px;
+  height: 192px;
+  margin-bottom: 12px;
+}
+
+.link {
+  padding: 4px;
+  background-color: var(--color-primary);
+  border-radius: 4px;
+  color: #fff;
+
+  &:hover {
+    color: #fff !important;
+  }
+}
