feat(styles): update mobile styles

--- a/features/landing/features/home/organisms/Main/components/CovidButtons/CovidButtons.css
+++ b/features/landing/features/home/organisms/Main/components/CovidButtons/CovidButtons.css
@@ -1,18 +1,26 @@
-
 .buttons {
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 16px;
   max-width: 924px;
   margin: 0 auto;
-}
 
+  @media (--smallDown) {
+    grid-template-columns: 1fr;
+  }
+}
 
 .first {
   justify-self: end;
-}
 
+  @media (--smallDown) {
+    justify-self: center;
+  }
+}
 
 .last {
   justify-self: start;
+  @media (--smallDown) {
+    justify-self: center;
+  }
 }
