--- a/features/landing/features/home/organisms/Corporate/components/Partners/Partners.css
+++ b/features/landing/features/home/organisms/Corporate/components/Partners/Partners.css
@@ -5,7 +5,6 @@
 
   @media (--smallDown) {
     max-width: 100vw;
-    padding: 0 16px;
     margin: 0 0 24px 0;
     text-align: left;
   }
@@ -50,4 +49,10 @@
 .link {
   font-size: 18px;
   line-height: 28px;
+}
+
+.partners {
+  @media (--smallDown) {
+    padding: 0 12px;
+  }
 }
