--- a/features/landing/features/home/page/Home.css
+++ b/features/landing/features/home/page/Home.css
@@ -10,4 +10,10 @@
 .wrapper {
   max-width: 960px;
   margin: 0 auto;
+
+
+  @media (--smallDown) {
+    max-width: 100vw;
+    padding: 40px 0  0 0;
+  }
 }
