--- a/features/landing/features/request-chat/components/Conclution/Conclution.css
+++ b/features/landing/features/request-chat/components/Conclution/Conclution.css
@@ -2,6 +2,9 @@
   max-width: 510px;
   margin: auto;
   text-align: center;
+  font: var(--fontFamily-title);
+  font-size: 24px;
+  line-height: 28px;
 
   @media (--smallDown) {
     padding: 0 16px;
