--- a/features/main/layout/organisms/Header/organisms/OtherPartners/OtherPartners.css
+++ b/features/main/layout/organisms/Header/organisms/OtherPartners/OtherPartners.css
@@ -11,9 +11,9 @@
 }
 
 .tablink {
-  font-size: 14px;
-  font-family: var(--fontFamily-title);
-  padding: 6px 20px;
+  font-size: 14px !important;
+  font-family: var(--fontFamily-title) !important;
+  padding: 6px 20px !important;
   color: var(--color-text-secondary) !important;
   text-transform: uppercase;
 
@@ -30,7 +30,7 @@
   display: flex;
 
   @media (--smallDown) {
-    flex-direction: column;
+    display: none;
   }
 }
 
