--- a/features/landing/features/home/organisms/Main/components/Intro/Intro.css
+++ b/features/landing/features/home/organisms/Main/components/Intro/Intro.css
@@ -41,10 +41,22 @@
   margin-bottom: 48px;
   text-align: center;
 
+  overflow: -moz-scrollbars-none;
+  scrollbar-width: none !important;
+  -ms-overflow-style: none;
+  -webkit-overflow-scrolling: touch;
+  &::-webkit-scrollbar {
+    display: none;
+  }
+
+  & > * {
+    min-width: 0;
+    min-height: 0;
+  }
+
   @media (--smallDown) {
+    overflow: scroll;
     display: flex;
-    flex-direction: column;
-    align-items: center;
     margin-bottom: 48px;
   }
 }
@@ -93,6 +105,25 @@
   }
 }
 
+
+.withHint {
+  position: relative;
+  opacity: 1;
+  z-index: 20;
+
+  @media (--smallDown) {
+    min-width: 280px;
+    height: 304px;
+    margin-right: 8px;
+    box-shadow: none;
+
+    &:last-child {
+      margin-bottom: 0;
+    }
+  }
+}
+
+
 .buttonContainer {
   display: flex;
   position: relative;
@@ -108,8 +139,10 @@
   transition: all ease-in 0.2s !important;
 
   @media (--smallDown) {
-    width: 100%;
-    margin-bottom: 16px;
+    min-width: 280px;
+    height: 304px;
+    margin-right: 8px;
+    box-shadow: none;
 
     &:last-child {
       margin-bottom: 0;
@@ -194,20 +227,6 @@
   }
 }
 
-.withHint {
-  position: relative;
-  opacity: 1;
-  z-index: 20;
-
-  @media (--smallDown) {
-    margin-right: 0;
-    margin-bottom: 16px;
-
-    &:last-child {
-      margin-bottom: 0;
-    }
-  }
-}
 
 .hint {
   padding: 4px;
