--- a/features/landing/features/home/organisms/Corporate/components/Partners/Partners.css
+++ b/features/landing/features/home/organisms/Corporate/components/Partners/Partners.css
@@ -6,6 +6,7 @@
   @media (--smallDown) {
     max-width: 100vw;
     margin: 0 0 24px 0;
+    font: var(--title-medium);
     text-align: left;
   }
 }
@@ -53,6 +54,6 @@
 
 .partners {
   @media (--smallDown) {
-    padding: 0 12px;
+    padding: 0 16px;
   }
 }
