--- a/features/landing/features/request-chat/components/askButton/AskButton.css
+++ b/features/landing/features/request-chat/components/askButton/AskButton.css
@@ -1,4 +1,8 @@
 .button {
   display: block;
-  margin: 40px auto 0;
+  margin: 48px auto  16px;
+
+  @media (--smallDown) { 
+    margin: 32px auto  16px;
+  }
 }
