--- a/features/landing/features/home/organisms/Corporate/components/Partners/components/PartnersList/PartnersList.css
+++ b/features/landing/features/home/organisms/Corporate/components/Partners/components/PartnersList/PartnersList.css
@@ -6,7 +6,7 @@
 
   @media (--smallDown) {
     max-width: 100vw;
-    margin-bottom: 32px;
+    margin-bottom: 0;
     flex-wrap: nowrap;
     overflow: scroll;
     overscroll-behavior: contain;
