--- a/features/landing/features/home/organisms/Main/components/CovidButtons/CovidButtons.css
+++ b/features/landing/features/home/organisms/Main/components/CovidButtons/CovidButtons.css
@@ -7,7 +7,7 @@
 
   @media (--smallDown) {
     grid-template-columns: 1fr;
-    gap: 4px
+    gap: 4px;
   }
 }
 
@@ -22,6 +22,7 @@
       padding-top: 16px !important;
       padding-bottom: 16px !important;
       width: 100%;
+      font: var(--text18-28) !important;
     }
   }
 }
@@ -36,6 +37,7 @@
       padding-top: 16px !important;
       padding-bottom: 16px !important;
       width: 100%;
+      font: var(--text18-28) !important;
     }
   }
 }
