--- a/features/landing/features/request-chat/RequestChat.css
+++ b/features/landing/features/request-chat/RequestChat.css
@@ -1,5 +1,5 @@
 .page {
-  background-color: #fff !important;
+  background-color: var(--color-beige) !important;
 }
 
 .mainHeader {
@@ -31,7 +31,8 @@
 .text {
   max-width: 510px;
   margin: auto;
-  text-align: center;
+  text-align: left;
+  white-space: pre-line;
 
   @media (--smallDown) {
     padding: 0 16px;
