--- a/features/landing/features/request-chat/components/articles/ArticlesList.css
+++ b/features/landing/features/request-chat/components/articles/ArticlesList.css
@@ -5,6 +5,7 @@
   transition: all ease-in 0.2s !important;
   margin-top: 64px;
   padding: 20px 16px;
+  background-color: #fff;
 
   &:hover {
     box-shadow: 0 24px 40px 0 rgba(21, 24, 51, 0.16);
