--- a/features/landing/features/home/organisms/Main/components/Intro/Intro.css
+++ b/features/landing/features/home/organisms/Main/components/Intro/Intro.css
@@ -139,6 +139,7 @@
   height: 100%;
   box-shadow: 0 24px 40px 0 rgba(21, 24, 51, 0.08);
   transition: all ease-in 0.2s !important;
+  border-bottom: none !important;
 
   @media (--smallDown) {
     min-width: 280px;
@@ -154,6 +155,7 @@
   &:hover {
     box-shadow: 0 24px 40px 0 rgba(21, 24, 51, 0.16);
     transform: scale(1.02);
+    border-bottom: none !important;
   }
 }
 
@@ -193,7 +195,7 @@
 .containerLarge {
   padding: 16px 0 0 0;
   grid-row: 1 / 3;
-  border-radius: 12px;
+  border-radius: 8px;
 
   & .buttonText {
     margin-bottom: 40px;
