--- a/features/landing/organisms/PartnerCard/PartnerCard.css
+++ b/features/landing/organisms/PartnerCard/PartnerCard.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 176px;
+  width: 220px;
   margin-right: 24px;
 
   @media (--smallDown) {
@@ -40,4 +40,10 @@
 .sum {
   margin: 0;
   font: var(--text14-20);
+}
+
+.description {
+  font-size: 14px;
+  line-height: 20px;
+  color: #82839B;
 }
