feat(app): fix form fields and landing styles

--- a/features/landing/features/home/organisms/Experts/Experts.css
+++ b/features/landing/features/home/organisms/Experts/Experts.css
@@ -31,9 +31,11 @@
   flex-direction: column;
   justify-content: center;
   text-align: left;
+  margin-right: 32px;
 
   @media (--smallDown) {
     margin-bottom: 32px;
+    margin-right: 0;
   }
 }
 
