feat(request articles): fix styles

--- a/features/landing/features/request-chat/components/articles/ArticlesList.css
+++ b/features/landing/features/request-chat/components/articles/ArticlesList.css
@@ -1,11 +1,12 @@
 .article {
-  min-height: 150px;
-  border-radius: 12px;
+  border-radius: 8px;
   box-shadow: 0 24px 40px 0 rgba(21, 24, 51, 0.08);
   transition: all ease-in 0.2s !important;
   margin-top: 64px;
   padding: 20px 16px;
+  min-height: 150px;
   background-color: #fff;
+  border: 1px solid rgba(97,102,129,0.04);
 
   &:hover {
     box-shadow: 0 24px 40px 0 rgba(21, 24, 51, 0.16);
