feat(intro): small fixes

--- a/features/landing/features/home/organisms/Main/components/Intro/Intro.css
+++ b/features/landing/features/home/organisms/Main/components/Intro/Intro.css
@@ -55,7 +55,8 @@
   }
 
   @media (--smallDown) {
-    overflow: scroll;
+    overflow-y: scroll;
+    overflow-x: hidden;
     display: flex;
     margin-bottom: 48px;
     margin-right: -16px;
