feat(request chat page): update styles

--- a/features/landing/features/request-chat/RequestChat.css
+++ b/features/landing/features/request-chat/RequestChat.css
@@ -44,12 +44,12 @@
 }
 
 .registrationDisclamer {
-  max-width: 286px;
   color: #82839b;
   font-size: 14px;
   margin: 0 auto;
   line-height: 20px;
   text-align: center;
+  margin-top: 16px;
 }
 
 .repeatTestButton {
