--- a/features/landing/features/request-chat/components/Conclusion/Conclution.css
+++ b/features/landing/features/request-chat/components/Conclusion/Conclution.css
@@ -1,11 +1,9 @@
 .text {
   max-width: 700px;
   margin: auto;
-  font: var(--fontFamily-title);
-  font-size: 24px;
-  line-height: 28px;
   text-align: left;
   white-space: pre-line;
+  font: var(--text16-24);
 
   @media (--smallDown) {
     padding: 0 16px;
@@ -14,4 +12,22 @@
   & ul {
     text-align: left;
   }
+}
+
+.notification {
+  display: flex;
+  padding: 24px;
+  border: 1px solid rgba(21,24,51,0.12);
+  border-radius: 8px;
+  margin-bottom: 24px;
+}
+
+.image {
+  width: 80px;
+  height: 80px;
+  margin-right: 16px;
+}
+
+.text li {
+  list-style: none;
 }
