feat(chat page): add mobile sty;es

--- a/features/landing/features/request-chat/RequestChat.css
+++ b/features/landing/features/request-chat/RequestChat.css
@@ -2,6 +2,10 @@
   background-color: var(--color-beige) !important;
 }
 
+.wrapper {
+  padding: 0 16px;
+}
+
 .mainHeader {
   background-color: #fff !important;
 }
