--- a/features/landing/features/home/organisms/Main/components/Intro/Intro.css
+++ b/features/landing/features/home/organisms/Main/components/Intro/Intro.css
@@ -55,10 +55,10 @@
   }
 
   @media (--smallDown) {
-    overflow-y: scroll;
-    overflow-x: hidden;
+    overflow-x: scroll;
+    overflow-y: hidden;
     display: flex;
-    margin-bottom: 48px;
+    margin-bottom: 32px;
     margin-right: -16px;
     margin-left: -16px;
     padding-left: 16px;
@@ -142,6 +142,8 @@
   transition: all ease-in 0.2s !important;
   border-bottom: none !important;
 
+  color: var(--color-text) !important;
+
   @media (--smallDown) {
     min-width: 280px;
     height: 304px;
@@ -153,10 +155,12 @@
     }
   }
 
-  &:hover {
+  @media (--smallUp) {
+    &:hover {
     box-shadow: 0 24px 40px 0 rgba(21, 24, 51, 0.16);
     transform: scale(1.02);
     border-bottom: none !important;
+  }
   }
 }
 
