--- a/features/landing/features/request-chat/components/articles/ArticlesList.css
+++ b/features/landing/features/request-chat/components/articles/ArticlesList.css
@@ -7,6 +7,7 @@
   background-color: #fff;
   border: 1px solid rgba(97, 102, 129, 0.04);
   margin-bottom: 24px;
+  line-height: 28px;
 
   &:hover {
     box-shadow: 0 24px 40px 0 rgba(21, 24, 51, 0.16);
