--- a/features/landing/features/request/molecules/Notification/Notification.css
+++ b/features/landing/features/request/molecules/Notification/Notification.css
@@ -8,6 +8,7 @@
 
   @media (--smallDown) {
     margin-bottom: 32px;
+    flex-direction: column;
   }
 }
 
@@ -18,6 +19,7 @@
 
   @media (--smallDown) {
     align-self: flex-start;
+    margin-bottom: 16px;
   }
 }
 
