--- a/features/landing/features/request/organisms/RequestForm/RequestForm.css
+++ b/features/landing/features/request/organisms/RequestForm/RequestForm.css
@@ -142,6 +142,17 @@
   }
 }
 
+.largeButton {
+  padding-top: 34px !important;
+  padding-bottom: 34px !important;
+  width: 100%;
+
+  @media (--smallDown) {
+    padding-top: 17px !important;
+    padding-bottom: 19px !important;
+  }
+}
+
 .symptomsList {
   display: grid;
   grid-template-columns: 1fr 1fr;
