--- a/features/landing/features/request-chat/components/articles/ArticlesList.css
+++ b/features/landing/features/request-chat/components/articles/ArticlesList.css
@@ -15,11 +15,14 @@
 
   @media (--smallDown) {
     min-width: 280px;
+    
   }
 }
 
 .title {
   font: var(--title-small);
+   font-size: 20px;
+    line-height: 24px;
   white-space: normal;
 }
 
