--- a/features/landing/features/home/organisms/Main/components/Steps/Steps.css
+++ b/features/landing/features/home/organisms/Main/components/Steps/Steps.css
@@ -33,6 +33,10 @@
 }
 
 .step {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
   @media (--smallDown) {
     display: flex;
     flex-direction: column;
@@ -55,7 +59,6 @@
 
 .img {
   width: 176px;
-  height: 192px;
   margin-bottom: 12px;
 }
 
