--- a/features/landing/features/request/molecules/Notification/Notification.css
+++ b/features/landing/features/request/molecules/Notification/Notification.css
@@ -1,10 +1,10 @@
 .notification {
   display: flex;
   width: 100%;
-  padding: 20px;
+  padding: 24px;
   margin-bottom: 64px;
-  border: 2px solid #f1f1f2;
-  border-radius: 20px;
+  border: 1px solid rgba(21,24,51,0.12);
+  border-radius: 8px;
 
   @media (--smallDown) {
     margin-bottom: 32px;
