--- a/features/landing/features/home/organisms/Main/components/Intro/Intro.css
+++ b/features/landing/features/home/organisms/Main/components/Intro/Intro.css
@@ -58,11 +58,12 @@
     overflow-x: scroll;
     overflow-y: hidden;
     display: flex;
-    margin-bottom: 32px;
     margin-right: -16px;
     margin-left: -16px;
     padding-left: 16px;
     padding-right: 16px;
+    padding-bottom: 32px;
+    margin-bottom: 0;
   }
 }
 
