--- a/features/landing/organisms/PartnerCard/PartnerCard.css
+++ b/features/landing/organisms/PartnerCard/PartnerCard.css
@@ -6,11 +6,13 @@
   margin-right: 24px;
 
   @media (--smallDown) {
-    width: 120px;
     margin-right: 40px;
 
     &:first-of-type {
-      padding-left: 16px;
+
+      & img {
+        width: 184px;
+      }
     }
   }
 
