--- a/features/landing/organisms/PartnerCard/PartnerCard.css
+++ b/features/landing/organisms/PartnerCard/PartnerCard.css
@@ -2,18 +2,16 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 220px;
+  max-width: 220px;
   margin-right: 24px;
+
+  &:first-child {
+    flex-grow: 1;
+  }
+
 
   @media (--smallDown) {
     margin-right: 40px;
-
-    &:first-of-type {
-
-      & img {
-        width: 184px;
-      }
-    }
   }
 
   @media (--xxsmallDown) {
@@ -41,6 +39,7 @@
   display: flex;
   height: 112px;
   margin-bottom: 24px;
+  width: 100%;
 }
 
 .label {
