--- a/features/landing/features/home/organisms/Corporate/components/Partners/components/PartnersList/PartnersList.css
+++ b/features/landing/features/home/organisms/Corporate/components/Partners/components/PartnersList/PartnersList.css
@@ -19,7 +19,12 @@
 }
 
 .buttonWrapper {
-  width: 220px;
+  width: 88px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
   @media (--smallDown) {
     width: 120px;
     padding-right: 16px;
@@ -30,7 +35,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 112px;
+  height: 64px;
   margin-bottom: 24px;
 }
 
@@ -65,6 +70,15 @@
     content: '';
     background-color: #000;
     transform: translate(-50%);
+  }
+
+  @media (--smallDown) {
+    width: 64px;
+    height: 64px;
+
+    &::after {
+      top: 13px;
+    }
   }
 }
 
