feat(partners): fix mobile styles

--- a/features/landing/features/home/organisms/Corporate/components/Partners/components/PartnersList/PartnersList.css
+++ b/features/landing/features/home/organisms/Corporate/components/Partners/components/PartnersList/PartnersList.css
@@ -11,6 +11,8 @@
     overflow: scroll;
     overscroll-behavior: contain;
     padding-left: 16px;
+    margin-left: -16px;
+    margin-right: -16px;
   }
 }
 
