feat(about): add href

--- a/features/landing/features/home/organisms/Corporate/components/Partners/Partners.css
+++ b/features/landing/features/home/organisms/Corporate/components/Partners/Partners.css
@@ -50,3 +50,9 @@
   font-size: 18px !important;
   line-height: 28px !important;
 }
+
+.anchor {
+  visibility: hidden;
+  position: relative;
+  top: -30px;
+}
