--- a/src/ui/button/Button.css
+++ b/src/ui/button/Button.css
@@ -3,10 +3,14 @@
   cursor: pointer;
   background-color: transparent;
   border: none;
-  border-radius: 8px;
+  border-radius: 6px;
   transition: border-color 0.2s, background-color 0.2s;
   &[disabled] {
     opacity: 0.4;
+  }
+
+  @media (--smallDown) {
+    border-radius: 4px;
   }
 }
 
@@ -65,13 +69,16 @@
 .extra-large {
   transition: border-color 0.2s, background-color 0.2s;
   padding: 17px 36px 19px 36px;
-  border-radius: 12px;
+  border-radius: 8px;
+  box-shadow: none;
 
   font: var(--text18-28);
   @media (--smallDown) {
     padding: 11px 28px 13px 28px;
     font: var(--text16-24);
     line-height: 24px;
+    box-shadow: none;
+    border-radius: 6px;
   }
 }
 
